--- a/SLBr/Pages/Browser.xaml
+++ b/SLBr/Pages/Browser.xaml
@@ -573,27 +573,41 @@
                         </ItemsControl>
                     </ScrollViewer>
                 </Border>
-                <Border BorderBrush="{StaticResource BorderBrush}" BorderThickness="0,0,0,1" Margin="0" Grid.Row="2" HorizontalAlignment="Stretch" Padding="5,0">
-                    <StackPanel>
-                        <ItemsControl VirtualizingPanel.VirtualizationMode="Recycling" x:Name="InfoBarList" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Disabled" ScrollViewer.CanContentScroll="False" BorderThickness="0" Background="Transparent">
-                            <ItemsControl.ItemsPanel>
-                                <ItemsPanelTemplate>
-                                    <StackPanel/>
-                                </ItemsPanelTemplate>
-                            </ItemsControl.ItemsPanel>
-                            <ItemsControl.ItemTemplate>
-                                <DataTemplate>
-                                    <Border Height="40" Margin="0,0,0,5" BorderThickness="1" BorderBrush="{StaticResource BorderBrush}" CornerRadius="5" Background="{StaticResource SecondaryBrush}">
-                                        <Grid>
-                                            <Grid.ColumnDefinitions>
-                                                <ColumnDefinition/>
-                                                <ColumnDefinition Width="Auto"/>
-                                                <ColumnDefinition Width="Auto"/>
-                                            </Grid.ColumnDefinitions>
-                                            <DockPanel Margin="10,5">
-                                                <TextBlock Visibility="{Binding Icon, Converter={StaticResource NullToVisibility}}" Foreground="{Binding IconForeground, TargetNullValue={StaticResource FontBrush}}" VerticalAlignment="Center" FontSize="18" FontFamily="{StaticResource IconFontFamily}" Margin="0,0,10,0" Text="{Binding Icon}"/>
-                                                <TextBlock VerticalAlignment="Center" Margin="0,0,10,0" TextTrimming="CharacterEllipsis" FontWeight="Medium" Text="{Binding Title}"/>
-                                                <ItemsControl ItemsSource="{Binding Description}" VerticalAlignment="Center" Margin="0,0,10,0">
+                <Border Background="{StaticResource SecondaryBrush}" BorderThickness="0" Margin="0" Grid.Row="2" HorizontalAlignment="Stretch">
+                    <Border x:Name="InfoBarContainer" Background="{StaticResource PrimaryBrush}" BorderBrush="{StaticResource BorderBrush}" BorderThickness="0,0,0,1" HorizontalAlignment="Stretch">
+                        <StackPanel>
+                            <ItemsControl VirtualizingPanel.VirtualizationMode="Recycling" x:Name="InfoBarList" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Disabled" ScrollViewer.CanContentScroll="False" BorderThickness="0" Background="Transparent">
+                                <ItemsControl.ItemsPanel>
+                                    <ItemsPanelTemplate>
+                                        <StackPanel/>
+                                    </ItemsPanelTemplate>
+                                </ItemsControl.ItemsPanel>
+                                <ItemsControl.ItemTemplate>
+                                    <DataTemplate>
+                                        <Border Height="40" Margin="5,0,5,5" BorderThickness="1" BorderBrush="{StaticResource BorderBrush}" CornerRadius="5" Background="{StaticResource SecondaryBrush}">
+                                            <Grid>
+                                                <Grid.ColumnDefinitions>
+                                                    <ColumnDefinition/>
+                                                    <ColumnDefinition Width="Auto"/>
+                                                    <ColumnDefinition Width="Auto"/>
+                                                </Grid.ColumnDefinitions>
+                                                <DockPanel Margin="10,5">
+                                                    <TextBlock Visibility="{Binding Icon, Converter={StaticResource NullToVisibility}}" Foreground="{Binding IconForeground, TargetNullValue={StaticResource FontBrush}}" VerticalAlignment="Center" FontSize="18" FontFamily="{StaticResource IconFontFamily}" Margin="0,0,10,0" Text="{Binding Icon}"/>
+                                                    <TextBlock VerticalAlignment="Center" Margin="0,0,10,0" TextTrimming="CharacterEllipsis" FontWeight="Medium" Text="{Binding Title}"/>
+                                                    <ItemsControl ItemsSource="{Binding Description}" VerticalAlignment="Center" Margin="0,0,10,0">
+                                                        <ItemsControl.ItemsPanel>
+                                                            <ItemsPanelTemplate>
+                                                                <StackPanel Orientation="Horizontal"/>
+                                                            </ItemsPanelTemplate>
+                                                        </ItemsControl.ItemsPanel>
+                                                        <ItemsControl.ItemTemplate>
+                                                            <DataTemplate>
+                                                                <TextBlock ToolTip="{Binding ToolTip}" TextTrimming="CharacterEllipsis" PreviewMouseUp="InfoBarRun_PreviewMouseUp" Text="{Binding Text}" Foreground="{Binding Foreground, TargetNullValue={StaticResource GrayBrush}}"/>
+                                                            </DataTemplate>
+                                                        </ItemsControl.ItemTemplate>
+                                                    </ItemsControl>
+                                                </DockPanel>
+                                                <ItemsControl ItemsSource="{Binding Actions}" VirtualizingPanel.VirtualizationMode="Recycling" Grid.Column="1" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Disabled" ScrollViewer.CanContentScroll="False" BorderThickness="0" Background="Transparent">
                                                     <ItemsControl.ItemsPanel>
                                                         <ItemsPanelTemplate>
                                                             <StackPanel Orientation="Horizontal"/>
@@ -601,30 +615,18 @@
                                                     </ItemsControl.ItemsPanel>
                                                     <ItemsControl.ItemTemplate>
                                                         <DataTemplate>
-                                                            <TextBlock ToolTip="{Binding ToolTip}" TextTrimming="CharacterEllipsis" PreviewMouseUp="InfoBarRun_PreviewMouseUp" Text="{Binding Text}" Foreground="{Binding Foreground, TargetNullValue={StaticResource GrayBrush}}"/>
+                                                            <Button ToolTip="{Binding ToolTip}" IsEnabled="{Binding IsEnabled}" Padding="10,0" Width="Auto" BorderThickness="{Binding Background, TargetNullValue={StaticResource BorderBrush}}" Foreground="{Binding Foreground, TargetNullValue={StaticResource FontBrush}}" Background="{Binding Background, TargetNullValue={StaticResource PrimaryBrush}}" Content="{Binding Text}" Command="{Binding Command}" Margin="0,0,10,0" Height="30"/>
                                                         </DataTemplate>
                                                     </ItemsControl.ItemTemplate>
                                                 </ItemsControl>
-                                            </DockPanel>
-                                            <ItemsControl ItemsSource="{Binding Actions}" VirtualizingPanel.VirtualizationMode="Recycling" Grid.Column="1" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Disabled" ScrollViewer.CanContentScroll="False" BorderThickness="0" Background="Transparent">
-                                                <ItemsControl.ItemsPanel>
-                                                    <ItemsPanelTemplate>
-                                                        <StackPanel Orientation="Horizontal"/>
-                                                    </ItemsPanelTemplate>
-                                                </ItemsControl.ItemsPanel>
-                                                <ItemsControl.ItemTemplate>
-                                                    <DataTemplate>
-                                                        <Button ToolTip="{Binding ToolTip}" IsEnabled="{Binding IsEnabled}" Padding="10,0" Width="Auto" BorderThickness="{Binding Background, TargetNullValue={StaticResource BorderBrush}}" Foreground="{Binding Foreground, TargetNullValue={StaticResource FontBrush}}" Background="{Binding Background, TargetNullValue={StaticResource PrimaryBrush}}" Content="{Binding Text}" Command="{Binding Command}" Margin="0,0,10,0" Height="30"/>
-                                                    </DataTemplate>
-                                                </ItemsControl.ItemTemplate>
-                                            </ItemsControl>
-                                            <Button Visibility="{Binding IsClosable, Converter={StaticResource BooleanToVisibility}}" Click="CloseInfoBarButton_Click" Grid.Column="2" BorderThickness="0" Margin="0,0,2.5,0" Background="Transparent" Style="{StaticResource IconButton}" Height="30" Width="30" ToolTip="Close" Content="&#xe711;"/>
-                                        </Grid>
-                                    </Border>
-                                </DataTemplate>
-                            </ItemsControl.ItemTemplate>
-                        </ItemsControl>
-                    </StackPanel>
+                                                <Button Visibility="{Binding IsClosable, Converter={StaticResource BooleanToVisibility}}" Click="CloseInfoBarButton_Click" Grid.Column="2" BorderThickness="0" Margin="0,0,2.5,0" Background="Transparent" Style="{StaticResource IconButton}" Height="30" Width="30" ToolTip="Close" Content="&#xe711;"/>
+                                            </Grid>
+                                        </Border>
+                                    </DataTemplate>
+                                </ItemsControl.ItemTemplate>
+                            </ItemsControl>
+                        </StackPanel>
+                    </Border>
                 </Border>
             </Grid>
         </Border>
