--- a/SLBr/WinUIStyleDictionary.xaml
+++ b/SLBr/WinUIStyleDictionary.xaml
@@ -3220,7 +3220,7 @@ Margin="{TemplateBinding Padding}"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type TabControl}">
-                    <Border Margin="0" Grid.Column="1" Background="{TemplateBinding Background}" BorderThickness="1,0,0,0" BorderBrush="{DynamicResource BorderBrush}" KeyboardNavigation.TabNavigation="Local" KeyboardNavigation.DirectionalNavigation="Contained" KeyboardNavigation.TabIndex="2">
+                    <Border Margin="0" Grid.Column="1" Background="{TemplateBinding Background}" BorderThickness="0" KeyboardNavigation.TabNavigation="Local" KeyboardNavigation.DirectionalNavigation="Contained" KeyboardNavigation.TabIndex="2">
                         <Grid>
                             <ScrollViewer VerticalScrollBarVisibility="Hidden">
                                 <ContentPresenter ContentSource="SelectedContent" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" Margin="0"/>
